force aws module to load commons logging from jcl bridge jar. remove commented code